[tool.poetry]
name = "pydpkg"
version = "1.9.2"
description = "A python library for parsing debian package control headers and version strings"
authors = ["Nathan J. Mehl <pypi@memory.blank.org>"]
homepage = "https://github.com/memory/python-dpkg"
repository = "https://github.com/memory/python-dpkg.git"
keywords = ["apt", "debian", "dpkg", "packaging"]
license = "Apache-2.0"
packages = [
  { include = "pydpkg" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: System :: Archiving :: Packaging",
]
readme = "README.md"

[tool.poetry.scripts]
dpkg-inspect = "pydpkg.dpkg_inspect:main"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
arpy = "^2.3.0"
six = "^1.16.0"
PGPy = "0.6.0"
zstandard = "^0.19.0"
cryptography = ">=39.0.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.7"
flakeheaven = "^3.2.1"
pycodestyle = "<2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven.plugins]
pycodestyle = [
    "+*",
    "-E203", # whitespace before ‘:’ (incompatible with Black)
    "-E501", # line too long (incompatible with Black)
    "-W503", # line break before binary operator (incompatible with Black)
]
